Fixed navbar clipping issues and added PayPal CSS

--- a/client/src/components/Navigation_Bar/Navbar.css
+++ b/client/src/components/Navigation_Bar/Navbar.css
@@ -1,6 +1,9 @@
-/* .navbar {
-    padding-bottom: 60px;
-} */
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 999 !important;
+    width: 100%;
+}
 
 .navbar ul {
     list-style: none;
@@ -11,7 +14,6 @@
 }
 
 .header {
-    /* position: fixed; */
     width: 100%;
 }
 
@@ -22,6 +24,7 @@
 
 .bottom-bar {
     background-color: white;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
 .bottom-bar__content {
